--- a/complementos/templates/home/Login.html
+++ b/complementos/templates/home/Login.html
@@ -5,9 +5,13 @@
 	{% csrf_token %}
 	{{ mensaje }}
 	{{ form.as_p }}
+	{% if next %}
+		<input type="hidden" value="{{next}}" name="next">
+	{% else %}
+		<input type="hidden" value="/" name="next">
+	{% endif %}
 	<button class="btn btn-primary" type="submit"> Login </button>
-<br><br>
 	<h5>Te puedes registrar en <a href="/registro/"> este enlace</a></h5>
-
 </form>
+
 {% endblock %}
