--- a/complementos/templates/home/gracias.html
+++ b/complementos/templates/home/gracias.html
@@ -2,7 +2,7 @@
 {% block title %} Registro {% endblock %}
 {% block content %}
 <h2> Gracias por registrarte en nuestra página</h2>
-<a href="/Login/" class="btn btn-primary"> Iniciar Sesión</a>
+<a href="/login/" class="btn btn-primary"> Iniciar Sesión</a>
 
 
 
