--- a/complementos/templates/home/about.html
+++ b/complementos/templates/home/about.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block title %} Sobre nosotros {% endblock %}
 {% block content %}
-<h1>Descripcion de mi pagina:<h1><br>
-<h3>{{ msg }}</h3>
+<h3>¿Quiénes somos?<h3><br>
+<h4>{{ msg }}</h4>
 {% endblock %}
