--- a/complementos/templates/home/productos.html
+++ b/complementos/templates/home/productos.html
@@ -1,58 +1,76 @@
 {% extends 'base.html' %}
-{% block title %} Lista de productos {% endblock %}
-{% block content %}
-<h1>Catalogo de productos</h1>
-<br>
+{% block title %} Lista de Productos {% endblock %}
+{%block content %}
+<!--IniciaModal-->
+<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="modal-header">
+<h3 id="myModalLabel">Eliminar Producto</h3>
+</div>
+<div class="modal-body">
+<p>¿Realmente desea eliminar el producto <span id="modal_name"></span>?</p>
+</div>
+<div class="modal-footer">
+<form method="post" id="frmEliminar">
+{% csrf_token %}
+<input type="hidden" id="modal_idProducto" name="product_id">
+<button class="btn" data-dismiss="modal" aria-hidden="true">Cerrar</button>
+<button type="submit" class="btn btn-danger">Eliminar</button>
+</form>
+</div>
+</div>
+<!--EndModal-->
+<h3>Catalogo de Productos:</h3>
 {% if user.is_authenticated %}
-<a href="{% url "vista_agregar_producto" %}">Agregar nuevo</a><br>
+<a href="{% url "vista_agregar_producto" %}" class="btn"><i class="icon-plus"></i> Agregar nuevo producto</a><br>
 {% endif %}
+<br>
 {% if productos %}
-	<table class="table table-hover">
-		<thead>
-			<tr>
-			 <th>Producto</th>
-			 <th>Precio</th>
-			 <th>Stock</th>
-			</tr>
-		</thead>
-	{% for p in productos %}
-		<tbody>
-		  <tr id="tr{{p.id}}">
-		  <td>{{ p.nombre }}</td>
-		  <td>{{ p.precio }}</td>
-		  <td>{{ p.stock }}</td>
-		  <td><a class="btn" href="/producto/{{p.id}}/"><i class="icon-search"></i> Detalles del producto</a></td>
-		  <td><a class="btn" href="#"><i class="icon-shopping-cart"></i> Comprar(no se puede comprar)</a></td>
-		  {% if user.is_authenticated and user.is_staff %}
-			<td><a class="btn" href="/edit/producto/{{p.id}}/"><i class="icon-pencil"></i> Editar </a></td>
-			<td><a href="#myModal" role="button" class="btn btn-danger delete" data-toggle="modal" id="{{p.id}}" data-name="{{p.nombre}}"><i class="icon-trash icon-white"></i>Eliminar</a></td>
-		  {% endif %}
+<table class="table table-hover" id="tabla_productos">
+<thead>
+<tr>
+<th>Producto</th>
+<th>Precio</th>
+<th>Stock</th>
+</tr>
+</thead>
+{% for p in productos %}
+<tbody>
+<tr id="tr{{p.id}}">
+<td>{{ p.nombre }}</td>
+<td>{{ p.precio }}</td>
+<td>{{ p.stock }}</td>
+<td><a class="btn" href="/producto/{{p.id}}/"><i class="icon-search"></i> Ver</a></td>
+<td><a class="btn" href="/compra/{{p.id}}/"><i class="icon-shopping-cart"></i> Comprar</a></td>
+{% if user.is_authenticated and user.is_staff %}
+<td><a class="btn" href="/edit/producto/{{p.id}}/"><i class="icon-pencil"></i> Editar </a></td>
+<td><a href="#myModal" role="button" class="btn btn-danger delete" data-toggle="modal" id="{{p.id}}" data-name="{{p.nombre}}"><i class="icon-trash icon-white"></i>Eliminar</a></td>
+{% endif %}
 </tr>
 </tbody>
-
-	
-	{% endfor %}
-	</table>
+{% endfor %}
+</table>
 {% else %}
-	<h2>No existen productos activos a la venta</h2>
+<h2>No existen productos a la venta. </h2>
 {% endif %}
-<br><br><br>
+<br>
 {% if productos %}
-        <a href="/productos/page/1"> << </a>
-        {% if productos.has_previous %}
-                <a href="/productos/page/{{productos.previous_page_number}}/"> Anterior </a>
-        {% else %}
-                <a href="#"> Anterior </a>
-        {% endif %}
-        {% if productos.has_next %}
-                <a href="/productos/page/{{productos.next_page_number}}/">Siguiente</a>
-        {% else %}
-                <a href="#"> Siguiente </a>
-	{% endif %}
-		<a href="/productos/page/{{productos.paginator.num_pages}}/"> >> </a>
-
-<br><br><br>
-	<h4> Página {{ productos.number}} de {{ productos.paginator.num_pages }}</h4>
+<div class="pagination">
+<ul>
+<li><a href="/productos/page/1"> << </a></li>
+{% if productos.has_previous %}
+<li><a href="/productos/page/{{productos.previous_page_number }}/"> Anterior </a></li>
+{% else %}
+<li><a href="#"> Anterior </a></li>
+{% endif %}
+{% if productos.has_next %}
+<li><a href="/productos/page/{{productos.next_page_number }}/"> Siguiente </a></li>
+{% else %}
+<li><a href="#"> Siguiente </a></li>
+{% endif %}
+<li><a href="/productos/page/{{productos.paginator.num_pages }} "> >> </a><li>
+</ul>
+</div>
+<h4> Página {{ productos.number }} de {{ productos.paginator.num_pages }}</h4>
 
 {% endif %}
 {% endblock %}
