--- a/complementos/templates/home/register.html
+++ b/complementos/templates/home/register.html
@@ -4,7 +4,7 @@
 <form action="." method="POST">
         {% csrf_token %}
         {{ form.as_p }}
-	<button class="btn btn-primary" type="submit">Registro</button>
+	<button class="btn btn-primary" type="submit">Dar de alta</button>
 </form>
 {% endblock %}
 
